Update 4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md

--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -11,6 +11,14 @@
 </br>
 
 ### 1) ABAP 클래스 구조와 호출 방식 정리
+- 정적 메서드는 클래스 기준, 인스턴스 메서드는 객체 기준으로 호출
+```abap
+클래스명=>CLASS-METHOD( ).     " 가능 (정적 메서드)
+클래스명=>METHOD( ).           " ❌ 오류 (인스턴스 메서드)
+
+참조변수->METHOD( ).           " 가능 (인스턴스 메서드)
+참조변수->CLASS-METHOD( ).     " 가능 (정적 메서드, 문법상 허용)
+```
 - `DATA` 는 객체마다 따로 생기는 변수, `CLASS-DATA` 는 클래스 전체가 하나를 공유하는 변수
 - `METHODS` 는 객체(인스턴스) 생성 후 호출, `CLASS-METHODS` 는 객체 없이 클래스명으로 바로 호출
 - Static Method(`CLASS-METHODS`) 안에서는 Static 컴포넌트(`CLASS-DATA`)만 직접 접근 가능
@@ -193,15 +201,28 @@ START-OF-SELECTION.
 DATA go_obj TYPE REF TO <class>.
 
 CREATE OBJECT go_obj.
-go_obj-><method>( ).
+<ref_obj>-><method_name>(
+  EXPORTING
+    <iv_par1> = <value1>
+    <iv_par2> = <value2>
+).
 ```
-- 정적 메서드는 클래스 기준, 인스턴스 메서드는 객체 기준으로 호출
 ```abap
-클래스명=>CLASS-METHOD( ).     " 가능 (정적 메서드)
-클래스명=>METHOD( ).           " ❌ 오류 (인스턴스 메서드)
+CREATE OBJECT go_vehicle.
+go_vehicle->set_attribute(
+EXPORTING iv_make = 'MK1'
+          iv_mode = 'MODEL1'
+).
+APPEND go_vehicle TO gt_vehicle.
 
-참조변수->METHOD( ).           " 가능 (인스턴스 메서드)
-참조변수->CLASS-METHOD( ).     " 가능 (정적 메서드, 문법상 허용)
+CREATE OBJECT go_vehicle.
+go_vehicle->set_attribute(
+EXPORTING iv_make = 'MK2'
+          iv_mode = 'MODEL2'
+).
+APPEND go_vehicle TO gt_vehicle.
+
+lcl_vehicle=>display_global_vehicles( ).      * gt_vehicle[ 1 ]->display_global_vehicles( ). 얘랑 같음
 ```
 
 </br>
