Update 4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md

--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -206,23 +206,52 @@ CREATE OBJECT go_obj.
     <iv_par1> = <value1>
     <iv_par2> = <value2>
 ).
+
+*************** 정적 메서드 호출 (Static Method Call) ****************
+<class_name>=><static_method>( ).
 ```
 ```abap
+REPORT ZPROGB03_0036.
+
+*************** 클래스 정의 ****************
+CLASS lcl_vehicle DEFINITION.
+  PUBLIC SECTION.                 " 외부 접근 가능
+    DATA: gv_data(2) TYPE c VALUE 'OK'.        " 인스턴스 속성
+    CLASS-DATA: gv_cdata(2) TYPE c VALUE 'HI'. " 정적 속성
+ENDCLASS.
+
+START-OF-SELECTION.
+
+*************** 객체 참조 변수 선언 ****************
+DATA: go_vehicle TYPE REF TO lcl_vehicle.
+DATA: gt_vehicle TYPE TABLE OF REF TO lcl_vehicle.
+
+*************** 객체 생성 및 설정 ****************
 CREATE OBJECT go_vehicle.
 go_vehicle->set_attribute(
-EXPORTING iv_make = 'MK1'
-          iv_mode = 'MODEL1'
+  EXPORTING
+    iv_make = 'MK1'
+    iv_mode = 'MODEL1'
 ).
 APPEND go_vehicle TO gt_vehicle.
 
 CREATE OBJECT go_vehicle.
 go_vehicle->set_attribute(
-EXPORTING iv_make = 'MK2'
-          iv_mode = 'MODEL2'
+  EXPORTING
+    iv_make = 'MK2'
+    iv_mode = 'MODEL2'
 ).
 APPEND go_vehicle TO gt_vehicle.
 
-lcl_vehicle=>display_global_vehicles( ).      * gt_vehicle[ 1 ]->display_global_vehicles( ). 얘랑 같음
+*************** 정적 메서드 호출 ****************
+lcl_vehicle=>display_global_vehicles( ).   " 정석 호출
+* gt_vehicle[ 1 ]->display_global_vehicles( ). " 문법상 가능 (비권장)
+
+*************** 데이터 접근 방식 비교 ****************
+WRITE: / gt_vehicle[ 1 ]->gv_cdata,     " 객체 통해 정적 데이터 접근
+       / lcl_vehicle=>gv_cdata,         " 클래스 통해 정적 데이터 접근 (정석)
+       / go_vehicle->gv_data,           " 인스턴스 데이터
+       / go_vehicle->gv_cdata.          " 정적 데이터 (객체 통해 접근 가능)
 ```
 
 </br>
