Update 4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md

--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -194,7 +194,7 @@ START-OF-SELECTION.
 </br>
 </br>
 
-### 4) ABAP 최신 메서드 호출 문법 (→method( ))
+### 4) ABAP 최신 메서드 호출 및 Static/Instance 메서드 호출 정리
 - 최신 메서드 호출은 `객체->메서드( )` 형식을 사용
 ```abap
 *************** 메서드 호출 (Method Call) ****************
