Update 4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md

--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -1,6 +1,9 @@
 ## <  핵심 개념 >
 - **1) `CALL METHOD go_alv->check_changed_data.` : ALV에 바인딩된 it_outtab 내부테이블의 변경사항을 반영함**
 </br>
+
+- **정적(Class) 메서드는 `클래스=>` , 인스턴스(Object) 메서드는 `객체->` 로 접근함**
+</br>
 </br>
 
 ---
@@ -210,6 +213,7 @@ CREATE OBJECT go_obj.
 *************** 정적 메서드 호출 (Static Method Call) ****************
 <class_name>=><static_method>( ).
 ```
+- 정적(Class) 메서드는 `클래스=>` , 인스턴스(Object) 메서드는 `객체->` 로 접근함
 ```abap
 REPORT ZPROGB03_0036.
 
@@ -253,7 +257,25 @@ WRITE: / gt_vehicle[ 1 ]->gv_cdata,     " 객체 통해 정적 데이터 접근
        / go_vehicle->gv_data,           " 인스턴스 데이터
        / go_vehicle->gv_cdata.          " 정적 데이터 (객체 통해 접근 가능)
 ```
+</br>
+</br>
 
+### 5) Functional Method (함수형 메서드)
+- RETURNING 파라미터를 정확히 1개만 가지는 메서드 (함수처럼 동작)
+- 대입문, 조건문, 계산식 안에서 바로 호출 가능
+```abap
+*************** 인스턴스 함수형 메서드 ****************
+result = <ref_obj>-><func_method>(
+  iv_par_1 = val_1
+  iv_par_n = val_n
+).
+
+*************** 정적 함수형 메서드 ****************
+result = <class_name>=><func_method>(
+  iv_par_1 = val_1
+  iv_par_n = val_n
+).
+```
 </br>
 </br>
 
