Update 4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md

--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -264,6 +264,16 @@ WRITE: / gt_vehicle[ 1 ]->gv_cdata,     " 객체 통해 정적 데이터 접근
 - RETURNING 파라미터를 정확히 1개만 가지는 메서드 (함수처럼 동작)
 - 대입문, 조건문, 계산식 안에서 바로 호출 가능
 ```abap
+*************** Functional Method 정의 ****************
+CLASS <class_name> DEFINITION.
+  PUBLIC SECTION.
+    METHODS <func_method>
+      IMPORTING
+        iv_par TYPE <type>
+      RETURNING
+        VALUE(rv_result) TYPE <return_type>.
+ENDCLASS.
+
 *************** 인스턴스 함수형 메서드 ****************
 result = <ref_obj>-><func_method>(
   iv_par_1 = val_1
