Update 4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md

--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -302,7 +302,6 @@ result = <class_name>=><func_method>(
 REPORT ZBC401_03_MAIN.
 TYPE-POOLS icon.
 
-*************** 클래스 정의 (CLASS DEFINITION) ****************
 CLASS lcl_airplane DEFINITION.
   PUBLIC SECTION.
     METHODS: set_attributes IMPORTING iv_name TYPE string
@@ -316,7 +315,6 @@ CLASS lcl_airplane DEFINITION.
     CLASS-DATA: gv_n_o_airplanes TYPE I.
 ENDCLASS.
 
-*************** 클래스 구현 (CLASS IMPLEMENTATION) ****************
 CLASS lcl_airplane IMPLEMENTATION.
   METHOD set_attributes.
     mv_name = iv_name.
@@ -334,4 +332,11 @@ CLASS lcl_airplane IMPLEMENTATION.
     WRITE:/ 'Number of airplane: ', gv_n_o_airplanes.
   ENDMETHOD.
 ENDCLASS.
+
+START-OF-SELECTION.
+  DATA: go_airplane TYPE REF TO lcl_airplane,
+        gt_airplane TYPE TABLE OF REF TO lcl_airplane.
+
+  CREATE OBJECT go_airplane.
+  APPEND go_airplane TO gt_airplane.
 ```
