Update 4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md

--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -3,6 +3,7 @@
 </br>
 
 - **정적(Class) 메서드는 `클래스=>` , 인스턴스(Object) 메서드는 `객체->` 로 접근함**
+- **Static Method(CLASS-METHODS) 안에서는 Static 컴포넌트(CLASS-DATA)만 직접 접근 가능**
 </br>
 </br>
 
