Update 4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md

--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -341,3 +341,32 @@ START-OF-SELECTION.
   CREATE OBJECT go_airplane.
   APPEND go_airplane TO gt_airplane.
 ```
+</br>
+</br>
+
+### 실습 2
+```abap
+REPORT ZBC400_B03_PRACTICE11.
+
+CLASS lcl_person DEFINITION.
+  PUBLIC SECTION.
+    CLASS-METHODS: display_info RETURNING VALUE(rv_result) TYPE CHAR40.
+  PRIVATE SECTION.
+    CLASS-DATA: name TYPE CHAR20 VALUE '홍길동',
+                age TYPE CHAR10 VALUE '20'.
+ENDCLASS.
+
+CLASS lcl_person IMPLEMENTATION.
+  METHOD display_info.
+    rv_result = name && `의 나이는 ` && age && '살 입니다.'.
+    WRITE: rv_result.
+  ENDMETHOD.
+ENDCLASS.
+
+START-OF-SELECTION.
+  lcl_person=>display_info( ).
+```
+</br>
+
+- 결과 확인
+<img width="275" height="135" alt="image" src="https://github.com/user-attachments/assets/168acaa0-7b64-4bfc-a1b8-5502e45386fd" />
