Update 4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md

--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -345,6 +345,13 @@ START-OF-SELECTION.
 </br>
 
 ### 실습 2
+</br>
+
+- 문제
+<img width="450" height="233" alt="image" src="https://github.com/user-attachments/assets/0977f843-147d-41c0-bddc-e8c508d55a79" />
+</br>
+</br>
+
 ```abap
 REPORT ZBC400_B03_PRACTICE11.
 
