Update 4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md

--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -358,21 +358,31 @@ REPORT ZBC400_B03_PRACTICE11.
 
 CLASS lcl_person DEFINITION.
   PUBLIC SECTION.
-    CLASS-METHODS: display_info RETURNING VALUE(rv_result) TYPE CHAR40.
+    CLASS-METHODS: display_info IMPORTING iv_name TYPE CHAR20
+                                          iv_age TYPE I
+                                RETURNING VALUE(rv_result) TYPE CHAR40.
   PRIVATE SECTION.
     CLASS-DATA: name TYPE CHAR20 VALUE '홍길동',
-                age TYPE CHAR10 VALUE '20'.
+                age TYPE I VALUE 20.
 ENDCLASS.
 
 CLASS lcl_person IMPLEMENTATION.
   METHOD display_info.
-    rv_result = name && `의 나이는 ` && age && '살 입니다.'.
+    IF iv_name IS NOT INITIAL.
+      name = iv_name.
+      age = iv_age.
+    ENDIF.
+    rv_result = iv_name && `의 나이는 ` && iv_age && '살 입니다.'.
     WRITE: rv_result.
   ENDMETHOD.
 ENDCLASS.
 
 START-OF-SELECTION.
-  lcl_person=>display_info( ).
+  lcl_person=>display_info(
+    EXPORTING
+      iv_name = '김예원'
+      iv_age = 24
+  ).
 ```
 </br>
 
