--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -4,6 +4,7 @@
 
 - **정적(Class) 메서드는 `클래스=>` , 인스턴스(Object) 메서드는 `객체->` 로 접근함**
 - **Static Method(CLASS-METHODS) 안에서는 Static 컴포넌트(CLASS-DATA)만 직접 접근 가능**
+- **캡슐화된 인스턴스 어트리뷰트 = `PRIVATE SECTION` 에 선언해 외부 직접 접근을 막은 객체 전용 변수**
 </br>
 </br>
 
@@ -348,6 +349,7 @@ START-OF-SELECTION.
 </br>
 
 - 문제
+- 캡슐화된 인스턴스 어트리뷰트 = `PRIVATE SECTION` 에 선언해 외부 직접 접근을 막은 객체 전용 변수
 <img width="379" height="196" alt="image" src="https://github.com/user-attachments/assets/82d06abd-b1ed-47cf-8641-827addf4b214" />
 
 </br>
