Update 4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md

--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -374,12 +374,17 @@ CLASS lcl_person IMPLEMENTATION.
       name = iv_name.
       age = iv_age.
     ENDIF.
-    rv_result = iv_name && `의 나이는 ` && iv_age && '살 입니다.'.
-    WRITE: rv_result.
+    rv_result = name && `의 나이는 ` && age && '살 입니다.'.
+    WRITE:/ rv_result.
   ENDMETHOD.
 ENDCLASS.
 
 START-OF-SELECTION.
+  lcl_person=>display_info(
+    EXPORTING
+      iv_name = ''
+      iv_age = 0
+  ).
   lcl_person=>display_info(
     EXPORTING
       iv_name = '김예원'
@@ -389,4 +394,4 @@ START-OF-SELECTION.
 </br>
 
 - 결과 확인
-<img width="275" height="135" alt="image" src="https://github.com/user-attachments/assets/168acaa0-7b64-4bfc-a1b8-5502e45386fd" />
+<img width="243" height="137" alt="image" src="https://github.com/user-attachments/assets/f339b0e1-734e-4225-a91c-d04bfdee140e" />
