Update 4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md

--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -282,11 +282,46 @@ result = <ref_obj>-><func_method>(
   iv_par_n = val_n
 ).
 
+<ref_obj>-><func_method>(
+  EXPORTING
+    iv_par_1 = <value1>
+    iv_par_n = <valueN>
+  RECEIVING
+    rv_result = <result>
+).
+
 *************** 정적 함수형 메서드 ****************
 result = <class_name>=><func_method>(
   iv_par_1 = val_1
   iv_par_n = val_n
 ).
+
+<class_name>=><func_method>(
+  EXPORTING
+    iv_par_1 = <value1>
+    iv_par_n = <valueN>
+  RECEIVING
+    rv_result = <result>
+).
+```
+```abap
+REPORT ZPROGB03_0036.
+
+*************** Static Functional Method 정의 ****************
+CLASS lcl_vehicle DEFINITION.
+  PUBLIC SECTION.  " 외부에서 접근이 가능
+   CLASS-METHODS: add_vehicles IMPORTING lv_num TYPE I
+                               RETURNING VALUE(rv_veh) TYPE I.
+ENDCLASS.
+
+*************** 정적 함수형 메서드 ****************
+START-OF-SELECTION.
+ DATA: gv_vehicle TYPE i. " 리턴값 받을 변수
+
+ gv_vehicle = lcl_vehicle=>add_vehicles( EXPORTING lv_num = 100 ).
+* lcl_vehicle=>add_vehicles( EXPORTING lv_num = 100            위랑 같은 코드
+*                            RECEIVING rv_veh = gv_vehicle ).
+ WRITE:/ gv_vehicle.
 ```
 </br>
 </br>
