Update 4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md

--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -393,42 +393,81 @@ START-OF-SELECTION.
 </br>
 
 ```abap
-REPORT ZBC400_B03_PRACTICE11.
+REPORT ZBC401_03_MAIN.
 
-CLASS lcl_person DEFINITION.
+TYPE-POOLS icon.
+
+CLASS lcl_airplane DEFINITION.
   PUBLIC SECTION.
-    CLASS-METHODS: display_info IMPORTING iv_name TYPE CHAR20
-                                          iv_age TYPE I
-                                RETURNING VALUE(rv_result) TYPE CHAR40.
+    METHODS: set_attributes IMPORTING iv_name TYPE string
+                                      iv_planetype TYPE saplane-planetype,
+             display_attributes.
+    CLASS-METHODS: display_gv_n_o_airplanes,
+                   get_n_o_airpalnes RETURNING VALUE(rv_result) TYPE I.
   PRIVATE SECTION.
-    CLASS-DATA: name TYPE CHAR20 VALUE '홍길동',
-                age TYPE I VALUE 20.
+    CONSTANTS: c_pos_l TYPE I VALUE 30.
+    DATA: mv_name TYPE string,
+          mv_planetype TYPE saplane-planetype.
+    CLASS-DATA: gv_n_o_airplanes TYPE I.
 ENDCLASS.
 
-CLASS lcl_person IMPLEMENTATION.
-  METHOD display_info.
-    IF iv_name IS NOT INITIAL.
-      name = iv_name.
-      age = iv_age.
-    ENDIF.
-    rv_result = name && `의 나이는 ` && age && '살 입니다.'.
-    WRITE:/ rv_result.
+CLASS lcl_airplane IMPLEMENTATION.
+  METHOD set_attributes.
+    mv_name = iv_name.
+    mv_planetype = iv_planetype.
+    gv_n_o_airplanes = gv_n_o_airplanes + 1.
+  ENDMETHOD.
+
+  METHOD display_attributes.
+    WRITE:/ icon_ws_plane AS ICON,
+          / 'Name: ', AT c_pos_l mv_name,
+          / 'Planetype: ', AT c_pos_l mv_planetype.
+  ENDMETHOD.
+
+  METHOD display_gv_n_o_airplanes.
+    WRITE:/ 'Number of airplane: ', gv_n_o_airplanes.
+  ENDMETHOD.
+
+  METHOD get_n_o_airpalnes.
+    rv_result = gv_n_o_airplanes.
   ENDMETHOD.
 ENDCLASS.
 
 START-OF-SELECTION.
-  lcl_person=>display_info(
-    EXPORTING
-      iv_name = ''
-      iv_age = 0
+  DATA: go_airplane TYPE REF TO lcl_airplane,
+        gt_airplane TYPE TABLE OF REF TO lcl_airplane,
+        gv_cnt TYPE I.
+
+  lcl_airplane=>display_gv_n_o_airplanes( ).
+  CREATE OBJECT go_airplane.
+  APPEND go_airplane TO gt_airplane.
+  go_airplane->set_attributes(
+    EXPORTING iv_name = '이름1'
+              iv_planetype = '747-400'
   ).
-  lcl_person=>display_info(
-    EXPORTING
-      iv_name = '김예원'
-      iv_age = 24
+
+  CREATE OBJECT go_airplane.
+  APPEND go_airplane TO gt_airplane.
+  go_airplane->set_attributes(
+    EXPORTING iv_name = '이름2'
+              iv_planetype = '146-200'
   ).
+
+  CREATE OBJECT go_airplane.
+  APPEND go_airplane TO gt_airplane.
+  go_airplane->set_attributes(
+    EXPORTING iv_name = '이름3'
+              iv_planetype = '777-300'
+  ).
+  gt_airplane[ 1 ]->display_gv_n_o_airplanes( ).
+
+  LOOP AT gt_airplane INTO go_airplane.
+    go_airplane->display_attributes( ).
+  ENDLOOP.
+  lcl_airplane=>get_n_o_airpalnes( RECEIVING rv_result = gv_cnt ).
+  WRITE:/ 'Number of airplane: ', gv_cnt.
 ```
 </br>
 
 - 결과 확인
-<img width="243" height="137" alt="image" src="https://github.com/user-attachments/assets/f339b0e1-734e-4225-a91c-d04bfdee140e" />
+<img width="288" height="256" alt="image" src="https://github.com/user-attachments/assets/6bb72263-072a-45b6-ac5d-a586f8f9d355" />
