Update 4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md

--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -15,6 +15,18 @@
 ## < ABAP 클래스 정의 기본 구조 >
 </br>
 
+**1) PUBLIC SECTION (외부 접근 가능)**
+- `DATA` : 인스턴스 속성 (객체마다 생성)
+- `CLASS-DATA` : 정적 속성 (클래스 1개 공유)
+- `METHODS` : 인스턴스 메서드
+- `CLASS-METHODS` : 정적 메서드
+
+**2) PRIVATE SECTION (외부 접근 불가)**
+- `DATA / CLASS-DATA` : 내부 전용 속성
+- `METHODS / CLASS-METHODS` : 내부 전용 메서드
+</br>
+</br>
+
 ### 1) ABAP 클래스 구조와 호출 방식 정리
 - 정적 메서드는 클래스 기준, 인스턴스 메서드는 객체 기준으로 호출
 ```abap
