--- a/ABAP 심화/5-2. 프로그래밍 전용 리포트 개발(총 정리).md
+++ b/ABAP 심화/5-2. 프로그래밍 전용 리포트 개발(총 정리).md
@@ -8140,17 +8140,19 @@ ENDMODULE.
 </br>
 </br>
 
-# 1/13
+# 01/13
 </br>
 </br>
 
 ## <  핵심 개념 >
-- **1) `CALL METHOD go_alv->check_changed_data.` : ALV에 바인딩된 it_outtab 내부테이블의 변경사항을 반영함**
+- **1) `PUBLIC SECTION`**
+- **2) `PRIVATE SECTION`**
 </br>
 
 - **정적(Class) 메서드는 `클래스=>` , 인스턴스(Object) 메서드는 `객체->` 로 접근함**
 - **Static Method(CLASS-METHODS) 안에서는 Static 컴포넌트(CLASS-DATA)만 직접 접근 가능**
 - **캡슐화된 인스턴스 어트리뷰트 = `PRIVATE SECTION` 에 선언해 외부 직접 접근을 막은 객체 전용 변수**
+- **CTS 생성 - `SE09`**
 </br>
 </br>
 
