Update 4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md

--- a/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
+++ b/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
@@ -19,3 +19,24 @@
 
 **1) Instance Constructor**
 - 객체가 생성되자마자 자동으로 실행되는 초기화 메서드
+```abap
+*************** 클래스 ****************
+CLASS <class> DEFINITION.
+  PUBLIC SECTION.
+    METHODS constructor
+      IMPORTING <p1> TYPE <type>.
+  PRIVATE SECTION.
+    DATA <a1> TYPE <type>.
+ENDCLASS.
+
+*************** 구현 ****************
+CLASS <class> IMPLEMENTATION.
+  METHOD constructor.
+    <a1> = <p1>.
+  ENDMETHOD.
+ENDCLASS.
+
+*************** 객체 생성 및 호출 ****************
+DATA <obj> TYPE REF TO <class>.
+CREATE OBJECT <obj> EXPORTING <p1> = <val>.
+```
