--- a/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
+++ b/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
@@ -18,7 +18,7 @@
 </br>
 
 **1) Instance Constructor**
-- 객체가 생성되자마자 자동으로 실행되는 초기화 메서드
+- 객체가 생성될 때마다 자동으로 실행되는 초기화 메서드
 ```abap
 *************** 클래스 ****************
 CLASS <class> DEFINITION.
