Update 4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md

--- a/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
+++ b/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
@@ -40,3 +40,31 @@ ENDCLASS.
 DATA <obj> TYPE REF TO <class>.
 CREATE OBJECT <obj> EXPORTING <p1> = <val>.
 ```
+```abap
+REPORT ZPROGB03_0036.
+
+CLASS lcl_vehicle DEFINITION.
+  PUBLIC SECTION.  " 외부에서 접근이 가능
+   METHODS: constructor IMPORTING iv_make TYPE s_make
+                                  iv_model TYPE s_model
+                        EXCEPTIONS wrong_planetype.
+ENDCLASS.
+
+CLASS lcl_vehicle IMPLEMENTATION.
+  METHOD constructor.
+    mv_make = iv_make.
+    mv_model = iv_model.
+
+    gv_vehicles = gv_vehicles + 1.
+  ENDMETHOD.
+ENDCLASS.
+
+START-OF-SELECTION.
+ CREATE OBJECT go_vehicle EXPORTING iv_make = 'AUDI'
+                                    iv_model = 'A3'
+                          EXCEPTIONS wrong_planetype = 1.
+
+ CREATE OBJECT go_vehicle EXPORTING iv_make = 'BMW'
+                                    iv_model = '318I'
+                          EXCEPTIONS wrong_planetype = 1.
+```
