--- a/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
+++ b/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
@@ -3,10 +3,7 @@
 - **2) `PRIVATE SECTION`**
 </br>
 
-- **정적(Class) 메서드는 `클래스=>` , 인스턴스(Object) 메서드는 `객체->` 로 접근함**
-- **Static Method(CLASS-METHODS) 안에서는 Static 컴포넌트(CLASS-DATA)만 직접 접근 가능**
-- **캡슐화된 인스턴스 어트리뷰트 = `PRIVATE SECTION` 에 선언해 외부 직접 접근을 막은 객체 전용 변수**
-- **CTS 생성 - `SE09`**
+- **`constructor` 는 `METHODS` 만 가능, `CLASS-METHODS` 에는 `class_constructor` 만 가능**
 </br>
 </br>
 
@@ -19,6 +16,7 @@
 
 **1) Instance Constructor**
 - 객체가 생성될 때마다 자동으로 실행되는 초기화 메서드
+- `constructor` 는 `METHODS` 만 가능, `CLASS-METHODS` 에는 `class_constructor` 만 가능
 ```abap
 *************** 클래스 ****************
 CLASS <class> DEFINITION.
