Update 4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md

--- a/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
+++ b/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
@@ -66,3 +66,108 @@ START-OF-SELECTION.
                                     iv_model = '318I'
                           EXCEPTIONS wrong_planetype = 1.
 ```
+</br>
+</br>
+
+---
+
+</br>
+
+## < 실습 코드 >
+</br>
+
+### 실습 1
+- Constructor 실습
+```abap
+REPORT ZBC401_03_MAIN.
+
+TYPE-POOLS icon.
+
+CLASS lcl_airplane DEFINITION.
+  PUBLIC SECTION.
+    METHODS: display_attributes,
+             constructor IMPORTING iv_name TYPE string
+                                   iv_planetype TYPE saplane-planetype
+                         EXCEPTIONS wrong_planetype.
+    CLASS-METHODS: display_gv_n_o_airplanes,
+                   get_n_o_airpalnes RETURNING VALUE(rv_result) TYPE I.
+  PRIVATE SECTION.
+    CONSTANTS: c_pos_l TYPE I VALUE 30.
+    DATA: mv_name TYPE string,
+          mv_planetype TYPE saplane-planetype.
+    DATA: mv_weight TYPE saplane-weight,
+          mv_tankcap TYPE saplane-tankcap.
+    CLASS-DATA: gv_n_o_airplanes TYPE I.
+ENDCLASS.
+
+CLASS lcl_airplane IMPLEMENTATION.
+  METHOD constructor.
+    DATA: gs_data TYPE saplane.
+
+    mv_name = iv_name.
+    mv_planetype = iv_planetype.
+
+    SELECT SINGLE * FROM saplane
+      INTO gs_data
+      WHERE planetype = mv_planetype.
+    IF sy-subrc <> 0.
+      RAISE wrong_planetype.
+    ELSE.
+      mv_weight = gs_data-weight.
+      mv_tankcap = gs_data-tankcap.
+      gv_n_o_airplanes = gv_n_o_airplanes + 1.
+    ENDIF.
+  ENDMETHOD.
+
+  METHOD display_attributes.
+    WRITE:/ icon_ws_plane AS ICON,
+          / 'Name: ', AT c_pos_l mv_name,
+          / 'Planetype: ', AT c_pos_l mv_planetype,
+          / 'Weight: ', AT c_pos_l mv_weight,
+          / 'Tankcap', AT c_pos_l mv_tankcap.
+  ENDMETHOD.
+
+  METHOD display_gv_n_o_airplanes.
+    WRITE:/ 'Number of airplane: ', gv_n_o_airplanes.
+  ENDMETHOD.
+
+  METHOD get_n_o_airpalnes.
+    rv_result = gv_n_o_airplanes.
+  ENDMETHOD.
+ENDCLASS.
+
+START-OF-SELECTION.
+  DATA: go_airplane TYPE REF TO lcl_airplane,
+        gt_airplane TYPE TABLE OF REF TO lcl_airplane,
+        gv_cnt TYPE I.
+
+  lcl_airplane=>display_gv_n_o_airplanes( ).
+  CREATE OBJECT go_airplane EXPORTING iv_name = '이름1'
+                                      iv_planetype = '747-00'
+                            EXCEPTIONS wrong_planetype = 1.
+  IF sy-subrc = 0.
+    APPEND go_airplane TO gt_airplane.
+  ENDIF.
+
+  CREATE OBJECT go_airplane EXPORTING iv_name = '이름2'
+                                      iv_planetype = '146-200'
+                            EXCEPTIONS wrong_planetype = 1.
+  IF sy-subrc = 0.
+    APPEND go_airplane TO gt_airplane.
+  ENDIF.
+
+  CREATE OBJECT go_airplane EXPORTING iv_name = '이름3'
+                                      iv_planetype = '777-300'
+                            EXCEPTIONS wrong_planetype = 1.
+  IF sy-subrc = 0.
+    APPEND go_airplane TO gt_airplane.
+  ENDIF.
+
+  gt_airplane[ 1 ]->display_gv_n_o_airplanes( ).
+
+  LOOP AT gt_airplane INTO go_airplane.
+    go_airplane->display_attributes( ).
+  ENDLOOP.
+  lcl_airplane=>get_n_o_airpalnes( RECEIVING rv_result = gv_cnt ).
+  WRITE:/ 'Number of airplane: ', gv_cnt.
+```
