Update 4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md

--- a/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
+++ b/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
@@ -14,7 +14,7 @@
 ## < ABAP 클래스 정의 기본 구조 >
 </br>
 
-**1) Instance Constructor**
+### 1) Instance Constructor
 - 객체가 생성될 때마다 자동으로 실행되는 초기화 메서드
 - `constructor` 는 `METHODS` 만 가능, `CLASS-METHODS` 에는 `class_constructor` 만 가능
 ```abap
@@ -65,6 +65,39 @@ START-OF-SELECTION.
  CREATE OBJECT go_vehicle EXPORTING iv_make = 'BMW'
                                     iv_model = '318I'
                           EXCEPTIONS wrong_planetype = 1.
+```
+</br>
+</br>
+
+### 2) Static Constructor
+- `class_constructor` 는 클래스가 처음 접근될 때 1번 자동 실행됨
+- 클래스 최초 접근 시 `class_constructor` 가 먼저 실행되고, 이후 객체 생성 시 `constructor` 가 실행됨
+```abap
+*************** 클래스 정의 ****************
+CLASS <class> DEFINITION.
+  PUBLIC SECTION.
+    CLASS-METHODS class_constructor.
+    METHODS constructor.
+  PRIVATE SECTION.
+    CLASS-DATA <static_attr> TYPE <type>.
+ENDCLASS.
+
+*************** 클래스 구현 ****************
+CLASS <class> IMPLEMENTATION.
+  METHOD class_constructor.
+    " 클래스 최초 접근 시 1회 실행
+  ENDMETHOD.
+
+  METHOD constructor.
+    " 객체 생성 시 실행
+  ENDMETHOD.
+ENDCLASS.
+
+*************** 최초 접근 ****************
+DATA <var> TYPE <type>.
+
+<var> = <class>=><static_method>( ).
+" → 처음이면 class_constructor 먼저 실행
 ```
 </br>
 </br>
