Update 4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md

--- a/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
+++ b/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
@@ -103,6 +103,8 @@ DATA <var> TYPE <type>.
 </br>
 
 ### 3) Self-Reference
+- `me->` 는 현재 객체 자신을 가리키며 객체의 속성에 접근할 때 사용
+- 이름 충돌이 없으면 생략 가능하고, 충돌 시 반드시 사용
 </br>
 </br>
 
