Update 4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md

--- a/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
+++ b/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
@@ -105,9 +105,53 @@ DATA <var> TYPE <type>.
 ### 3) Self-Reference
 - `me->` 는 현재 객체 자신을 가리키며 객체의 속성에 접근할 때 사용
 - 이름 충돌이 없으면 생략 가능하고, 충돌 시 반드시 사용
+```abap
+*************** 클래스 ****************
+CLASS <class> DEFINITION.
+  PRIVATE SECTION.
+    DATA <attr> TYPE <type>.
+ENDCLASS.
+
+*************** 구현 ****************
+CLASS <class> IMPLEMENTATION.
+  METHOD <method>.
+    <attr> = <value>.        " me-> 생략
+    me-><attr> = <value>.    " 명시적 자기참조
+  ENDMETHOD.
+ENDCLASS.
+```
 </br>
 </br>
 
+### 4) 같은 클래스 내부에서 메서드 간 호출 방식
+- 같은 클래스 안에서는 인스턴스/정적 메서드 모두 이름만으로 호출 가능
+```abap
+*************** 클래스 정의 ****************
+CLASS <class> DEFINITION.
+  PUBLIC SECTION.
+    METHODS <inst_meth>.
+    CLASS-METHODS <static_meth>.
+ENDCLASS.
+
+*************** 클래스 구현 ****************
+CLASS <class> IMPLEMENTATION.
+
+  METHOD <inst_meth>.
+    <inst_meth2>( ).          " 같은 클래스 인스턴스 메서드 호출 (me-> 생략)
+    <static_meth>( ).         " 같은 클래스 정적 메서드 호출 (클래스명 생략)
+  ENDMETHOD.
+
+  METHOD <inst_meth2>.
+  ENDMETHOD.
+
+  METHOD <static_meth>.
+  ENDMETHOD.
+
+ENDCLASS.
+```
+
+</br>
+</br>
 ---
 
 </br>
