Update 4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md

--- a/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
+++ b/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
@@ -4,6 +4,7 @@
 </br>
 
 - **`constructor` 는 `METHODS` 만 가능, `CLASS-METHODS` 에는 `class_constructor` 만 가능**
+- **같은 클래스 안에서는 인스턴스/정적 메서드 모두 이름만으로 호출 가능**
 </br>
 </br>
 
