Update 4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md

--- a/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
+++ b/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
@@ -256,3 +256,7 @@ START-OF-SELECTION.
   lcl_airplane=>get_n_o_airpalnes( RECEIVING rv_result = gv_cnt ).
   WRITE:/ 'Number of airplane: ', gv_cnt.
 ```
+</br>
+
+- 결과 확인
+<img width="409" height="316" alt="image" src="https://github.com/user-attachments/assets/c43af936-dad0-43c4-9b2d-7b3a386e6316" />
